to.etc.domui/src/resources/themes/blue/style.theme.css
/* ... */
.ui-stab-hdr .ui-tab-err a {
	background-image: url(tab-off-err-right.png);
}

.ui-stab-hdr .ui-tab-sel a {
	background-image: url(tab-norm-right-sel.png);
}

.ui-stab-scrl {
	border-bottom: 1px solid black;
}

.ui-stab-scrl-left {
	background: url(tab-scrl-left1.png) no-repeat transparent center;
	border:0 none;
	margin:0;
	visibility:hidden;
	display:block;
	width: 15px;
	height: 24px;	
}

.ui-stab-scrl-left:hover {
	background: url(tab-scrl-left.png) no-repeat transparent center;
	cursor: pointer;
}

.ui-stab-scrl-right {
	background: url(tab-scrl-right1.png) no-repeat transparent center;
	border:0 none;
	margin:0;
	visibility:hidden;	
	display:block;
	width: 15px;
	height: 24px;	
}

.ui-stab-scrl-right:hover {
	background: url(tab-scrl-right.png) no-repeat transparent center;
	cursor: pointer;
}

/*** Body element ***/
body,html {
/*	background: url(bg-body.png) repeat-x;  jal 20110218 This cannot be present when background-color is color-replaced. */
	background-color: <%= bg_color %>;
	height: 100%; /* vmijic - changed to 100% (was 90%). Is here a reason for 90%? We have problem with splitter otherwise... */
	margin: 0px;
	overflow: auto;
}

/*** IO hider overlay ***/
.ui-io-blk {
	height: 100%;
	width: 100%;
	opacity: 0.0;
	position: fixed;
	top: 0px;
	left: 0px;
	filter:alpha(opacity=0);
	z-index: 1000;
}
.ui-io-blk2 {
	height: 100%;
	width: 100%;
	opacity: 0.5;
	position: fixed;
	top: 0px;
	left: 0px;
	background: black url(io-blk-wait.gif) no-repeat center center; 
	filter:alpha(opacity=50);
	z-index: 1000;
}

/*** Percentage progress bar ***/
.ui-pct-rlr {
	display: inline-block;
	width: 50px;
	background-image: url(bg-progress.png);
	background-position: -375px 0px;
	background-repeat: no-repeat;
	/*border-collapse: separate; */
	border: 1px solid black;
}
<% if(browser.isIE()) { %>
.ui-pct-rlr { /* IE 7 FIX: by repeating the display: inline in a SEPARATE css selector we force proper inline-block behaviour, see http://www.brunildo.org/test/InlineBlockLayout.html */
	display: inline;
}
<% } %>
<% if(browser.isFirefox()) { %>
/** FIREFOX BROWSERT */
<% } %>

/*** DisplayHtml ***/
.ui-dhtml-blk {
	display: block;
}
.ui-dhtml-inl {
	display: inline;
}
.ui-dhtml-ibl {
	display: inline-block;
}
<% if(browser.isIE()) { %>
.ui-dhtml-ibl { /* IE 7 FIX: by repeating the display: inline in a SEPARATE css selector we force proper inline-block behaviour, see http://www.brunildo.org/test/InlineBlockLayout.html */
	display: inline;
}
<% } %>

/*** Helper classes ***/
.ui-szless {
	padding: 0px;
	margin: 0px;
}
.ui-clickable {
	cursor: pointer;
}
.ui-sup {
	font-size: xx-small;
	vertical-align: top;
}
.ui-sub {
	font-size: xx-small;
	vertical-align: bottom;
}
.ui-pre {
	white-space: pre;
}
.ui-nowrap {
	white-space: nowrap;
}
.ui-printdiv {
	overflow: hidden;
	width: 1px;
	height: 1px;
	position: absolute;
	bottom: 0px;
	left: 0px;
}

.ui-hor-divider {
	min-width: 0px;
	max-width: 0px;
	width: 0px;
	border-left: 2px dotted <%= header_bg %>; /*#6b99e8;*/
	background-color: #e5e5e5;
}

/*** Development mode popup ***/
.ui-ipt {
	z-index: 200;
	position: absolute;
	top: 20px;
	left: 80px;
	width: 500px;
	height: 200px;
	background-color: #04001f;
	border: 4px solid black;
}
.ui-ipt-ttl {
	background-color: #24001f;
	font-size: large;
	color: orange;
}
.ui-ipt-list {
	overflow: auto;
	height: 170px;
}
.ui-ipt-item {
	background-color: #201c3d;
	padding: 3px;
	border-bottom: 1px dotted #444444;
	color: white;
	white-space: nowrap;
}
.ui-ipt-btn {
	cursor: crosshair;
}

/*** Color picker ***/
.colorpicker {
	width: 356px;
	height: 176px;
	overflow: hidden;
	position: absolute;
	background: url(colorpicker_background.png);
	font-family: Arial, Helvetica, sans-serif;
	display: none;
}
.colorpicker_color {
	width: 150px;
	height: 150px;
	left: 14px;
	top: 13px;
	position: absolute;
	background: #f00;
	overflow: hidden;
	cursor: crosshair;
}
.colorpicker_color div {
	position: absolute;
	top: 0;
	left: 0;
	width: 150px;
	height: 150px;
	background: url(colorpicker_overlay.png);
}
.colorpicker_color div div {
	position: absolute;
	top: 0;
	left: 0;
	width: 11px;
	height: 11px;
	overflow: hidden;
	background: url(colorpicker_select.gif);
	margin: -5px 0 0 -5px;
}
.colorpicker_hue {
	position: absolute;
	top: 13px;
	left: 171px;
	width: 35px;
	height: 150px;
	cursor: n-resize;
}
.colorpicker_hue div {
	position: absolute;
	width: 35px;
	height: 9px;
	overflow: hidden;
	background: url(colorpicker_indic.gif) left top;
	margin: -4px 0 0 0;
	left: 0px;
}
.colorpicker_new_color {
	position: absolute;
	width: 60px;
	height: 30px;
	left: 213px;
	top: 13px;
	background: #f00;
}
.colorpicker_current_color {
	position: absolute;
	width: 60px;
	height: 30px;
	left: 283px;
	top: 13px;
	background: #f00;
}
.colorpicker input {
	background-color: transparent;
	border: 1px solid transparent;
	position: absolute;
	font-size: 10px;
	font-family: Arial, Helvetica, sans-serif;
	color: #898989;
	top: 4px;
	right: 11px;
	text-align: right;
	margin: 0;
	padding: 0;
	height: 11px;
}
.colorpicker_hex {
	position: absolute;
	width: 72px;
	height: 22px;
	background: url(colorpicker_hex.png) top;
	left: 212px;
	top: 142px;
}
.colorpicker_hex input {
	right: 6px;
}
.colorpicker_field {
	height: 22px;
	width: 62px;
	background-position: top;
	position: absolute;
}
.colorpicker_field span {
	position: absolute;
	width: 12px;
	height: 22px;
	overflow: hidden;
	top: 0;
	right: 0;
	cursor: n-resize;
}
.colorpicker_rgb_r {
	background-image: url(colorpicker_rgb_r.png);
	top: 52px;
	left: 212px;
}
.colorpicker_rgb_g {
	background-image: url(colorpicker_rgb_g.png);
	top: 82px;
	left: 212px;
}
.colorpicker_rgb_b {
	background-image: url(colorpicker_rgb_b.png);
	top: 112px;
	left: 212px;
}
.colorpicker_hsb_h {
	background-image: url(colorpicker_hsb_h.png);
	top: 52px;
	left: 282px;
}
.colorpicker_hsb_s {
	background-image: url(colorpicker_hsb_s.png);
	top: 82px;
	left: 282px;
}
/* ... */

